--- a/src/App.css
+++ b/src/App.css
@@ -29,13 +29,29 @@ h1{
   margin-bottom: 2px; 
 }
 
+.titulo-pagamento{
+  text-align: center;
+}
+
+.dados-pagamento{
+  width: 99%;
+  height: 100vh;
+  background-color: #292b3f;
+  margin-left: 10px;
+  padding-top:  5px;
+  border-radius: 5px;
+  margin-bottom: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .usuarios-box{
   display: flex;
   flex-direction: row;
   height: 190px;
   background-color: #292b3f;
-  margin: 0 5px 0 5px;
-  
+  margin: 0 5px 0 5px;  
 }
 
 .usuarios-box-img {
@@ -45,7 +61,6 @@ h1{
   border-radius: 50%;
   margin-left: 50px;
   margin-top: 30px;
-
 }
 
 .usuarios-box-img img{
@@ -83,6 +98,90 @@ h1{
 .usuarios-box-button button:hover{
   background-color: #C0D0FA;
   color: white; 
+}
+
+/*Componente de pagamento*/
+
+.box-pagamentos{
+  background-color: #292b3f;
+  margin: 0 5px 0 5px;
+  height: 99vh;
+}
+
+.box-pagamentos-input{
+  width: 450px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid;
+  margin-top: 20px;
+  font-size: 20px; 
+  padding: 10px;
+  color: #888888;
+  border: 1px solid #979797;
+}
+
+.select-box select{
+  width: 450px;
+  height: 40px;
+  border-radius: 4px;
+  margin-top: 10px;
+  font-size: 20px; 
+  border: 1px solid #979797;
+  padding: 5px;
+}
+.button-pagamento{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button-pagamento button{
+  margin-top: 20px;
+  width: 100px;
+  height: 40px;
+  border: 1px solid #979797;
+  border-radius: 5px;
+  background-color: white;
+  color: #424242; 
+  font-size: 20px; 
+}
+
+.button-pagamento button:hover{
+  background-color: #C0D0FA;
+  color: white; 
+}
+
+/*Modal de pagamento com sucesso*/
+.modal-container{
+  width: 98%;
+  height: 100vh;
+  margin-left: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.modal-sucesso{
+  width: 500px;
+  height: 200px;
+  border-radius: 5px;
+  margin-top: 50px;
+}
+
+.modal-sucesso-titulo{
+  background-color: #292b3f;
+  height: 60px; 
+  text-align: center;
+  padding: 15px;
+  border-radius: 5px 5px 0 0;
+}
+
+.modal-sucesso-body{
+  background-color: white;
+  height: 138px; 
+  text-align: center;
+  padding: 40px;
+  border-radius: 0 0 5px 5px;
+  font-size: 18px;
 }
 
 @media only screen and (max-width: 411px){
